--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,15 +10,15 @@
 
     = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Montserrat:300"
 
-    = javascript_include_tag 'mixpanel'
+    = javascript_include_tag 'mixpanel', async: true
 
-    = javascript_include_tag 'fingerprintjs2'
+    = javascript_include_tag 'fingerprintjs2', async: true
 
     = javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=#{Rails.application.secrets.google_places[:api_key]}&libraries=places&callback=onReviewPageLoad.initializeGooglePlaces", async: Rails.env.production?, defer: 'defer'
 
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload', async: Rails.env.production?
 
-    = javascript_include_tag 'typeahead'
+    = javascript_include_tag 'typeahead', async: true
 
 
   %body
