Changing assets load to help load index page faster.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
  @import 'footer';
  @import 'index';
  @import 'material-design-iconic-font.min';
+ @import 'montserrat';
  @import 'privacy';
  @import 'region';
  @import 'review';
