--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,9 +8,9 @@
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
 
-    = javascript_include_tag 'mixpanel', async: Rails.env.production?
+    = javascript_include_tag 'mixpanel', defer: 'defer'
 
-    = javascript_include_tag 'fingerprintjs2', async: Rails.env.production?
+    = javascript_include_tag 'fingerprintjs2', defer: 'defer'
 
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: 'defer'
 
